<resources>
    <string name="app_name">LooLocator</string>
    <string name="title">Loo Locator</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="back_button">Go Back Button</string>
    <string name="title_activity_filter_view">Toilet Filter</string>
    <string name="range_filter">Maximum Toilet Distance</string>
    <string name="filter_description">Filter Require</string>
    <string name="male">Male Toilet</string>
    <string name="female">Female Toilet</string>
    <string name="disabled">Disabled Toilet</string>
    <string name="baby">Baby Toilet</string>
    <string name="prayer">Prayer Room</string>
</resources>