<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#143642"
    android:padding="0pt"
    tools:context=".LoginViewActivity">

    <ImageView
        android:id="@+id/looLocatorIcon"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="226dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999"
        app:srcCompat="@drawable/loo_locator_icon"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="289dp"
        android:fontFamily="@font/itim"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/looLocatorIcon" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/itim"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        android:autofillHints="Username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="Password"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/itim"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="170dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/itim"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>